titlebar alignment left fixed

--- a/styles/_sphinx_base.scss
+++ b/styles/_sphinx_base.scss
@@ -789,7 +789,7 @@ article.pytorch-article {
 
   @include sphinx-medium-size {
     float: left;
-    margin-left: 3%;
+    margin-left: 20px;
     width: $sphinx_article_width;
   }
 
